--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <div class="producto">
 
       <div class="prodimg">   
- <img src="/img/modelo.jpg" alt="">
+ <img src="img/modelo.jpg" alt="">
  <h4>Tequila Gran Centenario Plata 700ml</h4>
       </div>
 
@@ -66,7 +66,7 @@
 <div class="producto">
 
   <div class="prodimg">   
-<img src="/img/corona.jpg" alt="">
+<img src="img/corona.jpg" alt="">
 
 <h4>Whisky Johnnie Walker Double Black Label 750 ml</h4>
   </div>
